--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,13 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: TeraLang
+description: A lightweight, easy-to-use language for quickly creating mock APIs and mock backends for frontend development
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: A lightweight, easy-to-use language for quickly creating mock APIs and mock backends for frontend development
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/teralang.png
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Getting started
+      link: /getting-started
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
-
-import { Card, CardGrid } from "@astrojs/starlight/components";
-
-## Next steps
-
-<CardGrid stagger>
-  <Card title="Update content" icon="pencil">
-    Edit `src/content/docs/index.mdx` to see this page change.
-  </Card>
-  <Card title="Add new content" icon="add-document">
-    Add Markdown or MDX files to `src/content/docs` to create new pages.
-  </Card>
-  <Card title="Configure your site" icon="setting">
-    Edit your `sidebar` and other config in `astro.config.mjs`.
-  </Card>
-  <Card title="Read the docs" icon="open-book">
-    Learn more in [the Starlight Docs](https://starlight.astro.build/).
-  </Card>
-</CardGrid>
